# enclose-horse-solver

./: .gitignore  Caddyfile  Cargo.toml  README.md  build-wasm.sh  package-lock.json  run.sh
.cargo/: config.toml
.github/workflows/: test.yml
docs/: SPEC.md
gpu-solver/: Cargo.toml
gpu-solver/src/: main.rs  shader.wgsl
optimal-solver/: Cargo.toml  README.md
optimal-solver/src/: main.rs
src/: flood_fill.rs  grid.rs  lib.rs  main.rs  serve.rs  solver.rs
web/: index.html
