[package]
name = "enclose-horse-solver"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["dep:reqwest", "dep:chrono", "dep:rayon"]
wasm = ["dep:wasm-bindgen", "dep:getrandom", "dep:rayon", "dep:wasm-bindgen-rayon"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
rayon = { version = "1.10", optional = true }
chrono = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }
wasm-bindgen-rayon = { version = "1", optional = true }

[[bin]]
name = "enclose-horse-solver"
path = "src/main.rs"

[[bin]]
name = "serve"
path = "src/serve.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
