[package]
name = "optimal-solver"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "optimal-solver"
path = "src/main.rs"

[dependencies]
enclose-horse-solver = { path = "..", default-features = false, features = ["native"] }
highs = "2"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
chrono = "0.4"
